<resources>
    <string name="app_name">TA_PPPB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="items">Items</string>
    <string name="abilities">Abilities</string>
    <string name="types">Types</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="sp_atk">Sp. Atk</string>
    <string name="sp_def">Sp. Def</string>
    <string name="speed">Speed</string>
    <string name="type">Type</string>
    <string name="search_element">Search element by name...</string>
    <string name="search_item">Search item by name...</string>
    <string name="search_pokemon">Search pokemon by name...</string>
    <string name="pokedex">Pokedex</string>
</resources>